added assoc logo and made non-visual changes to our works section

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
         <!-- TODO: fixed top  -->
         <div class="container">
-            <a class="navbar-brand fs-3" href="#">Mathematics Association
-                <span class="d-none d-md-inline-block">BITS Pilani</span>
-            </a>
+            <div class="row w-75 align-items-center justify-content-start">
+                <img src="assets/LOGOS/assoc.png" class="d-none d-sm-inline-block col-2">
+                <a class="col-auto navbar-brand fs-4" href="#">Mathematics Association
+                    <span class="d-none d-md-block">BITS Pilani</span>
+                </a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-dropdown"
                 aria-controls="nav-dropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -76,7 +79,7 @@
         <div class="container">
             <div class="row pt-5 align-items-center justify-content-center justify-content-md-between">
                 <div class="spotlight-image d-none d-md-inline-block col-md-4">
-                    <img src="assets/bg-removed-clock-tower-1.png" class="rounded-circle img-fluid"
+                    <img src="assets/clock-tower.png" class="rounded-circle img-fluid"
                         alt="bits-pilani-clock-tower">
                 </div>
                 <div class="spotlight-content text-start col-10 col-md-7">
@@ -116,8 +119,7 @@
         <h1 class="p-3 display-4 text-dark fw-bold border-bottom">Our Works</h1>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 p-2">
             <div class="col olympiads">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url('unsplash-photo-1.jpg');">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
                     <div class="d-flex flex-column h-100 p-3 pb-3 text-white text-shadow-1">
                         <div class="d-flex align-items-center">
                             <i class="bi bi-bullseye text-light fs-2 me-3"></i>
@@ -130,8 +132,7 @@
                 </div>
             </div>
             <div class="col workshops">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url('unsplash-photo-1.jpg');">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
                     <div class="d-flex flex-column h-100 p-3 pb-3 text-white text-shadow-1">
                         <div class="d-flex align-items-center">
                             <i class="bi bi-gear-fill text-light fs-2 me-3"></i>
@@ -144,8 +145,7 @@
                 </div>
             </div>
             <div class="col talks">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url('unsplash-photo-1.jpg');">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
                     <div class="d-flex flex-column h-100 p-3 pb-3 text-white text-shadow-1">
                         <div class="d-flex align-items-center">
                             <i class="bi bi-megaphone-fill text-light fs-2 me-3"></i>
@@ -160,8 +160,7 @@
         </div>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 p-2">
             <div class="col blogs ">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url('unsplash-photo-1.jpg');">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
                     <div class="d-flex flex-column h-100 p-3 pb-3 text-white text-shadow-1">
                         <div class="d-flex align-items-center">
                             <i class="bi bi-pencil-square text-light fs-2 me-3"></i>
@@ -174,8 +173,7 @@
                 </div>
             </div>
             <div class="col newsletters">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url('unsplash-photo-1.jpg');">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
                     <div class="d-flex flex-column h-100 p-3 pb-3 text-white text-shadow-1">
                         <div class="d-flex align-items-center">
                             <i class="bi bi-newspaper text-light fs-2 me-3"></i>
@@ -188,8 +186,7 @@
                 </div>
             </div>
             <div class="col guest-lectures">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url('unsplash-photo-1.jpg');">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
                     <div class="d-flex flex-column h-100 p-3 pb-3 text-white text-shadow-1">
                         <div class="d-flex align-items-center">
                             <i class="bi bi-people-fill text-light fs-2 me-3"></i>
@@ -209,7 +206,7 @@
         <div class="container">
             <div class="row justify-content-evenly pb-4">
                 <!-- <div class="col-12 col-lg-6 col-xl-4 d-flex justify-content-evenly mb-5 mb-lg-0"> -->
-                <div class="col-10 col-lg-6 col-xl-4 d-flex justify-content-center gap-3 mb-5 mb-lg-0">
+                <div class="col-10 col-lg-6 col-xl-5 d-flex justify-content-center gap-3 mb-5 mb-lg-0">
                     <img src="assets/LOGOS/BITS.png" alt="BITS Pilani" class="img-fluid w-25">
                     <div class="d-flex flex-column justify-content-center">
                         <span>Mathematics Association <span class="d-none d-md-inline">BITS Pilani</span></span>
@@ -235,8 +232,9 @@
                     </div>
                 </div>
             </div>
-            <p class="text-center text-secondary">&copy; 2021 Mathematics Association BITS Pilani. <span
-                    class="d-block d-md-inline">All Rights Reserved.</span></p>
+            <p class="text-center text-secondary">&copy; 2021 Mathematics Association BITS Pilani.
+                <span class="d-block d-md-inline">All Rights Reserved.</span>
+            </p>
             <a href="#" class="d-none d-md-inline position-absolute top-0 bottom-0 end-0 p-5">
                 <i class="bi bi-arrow-up-circle text-light fs-1"></i>
             </a>
