--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
@@ -79,8 +82,7 @@
         <div class="container">
             <div class="row pt-5 align-items-center justify-content-center justify-content-md-between">
                 <div class="spotlight-image d-none d-md-inline-block col-md-4">
-                    <img src="assets/clock-tower.png" class="rounded-circle img-fluid"
-                        alt="bits-pilani-clock-tower">
+                    <img src="assets/clock-tower.png" class="rounded-circle img-fluid" alt="bits-pilani-clock-tower">
                 </div>
                 <div class="spotlight-content text-start col-10 col-md-7">
                     <!-- TODO: OPTION 1 -->
@@ -93,11 +95,11 @@
                     <!-- TODO: OPTION 2 -->
                     <h1 class="display-6 d-md-none fw-bold">Mathematics Association</h1>
                     <h1 class="display-5 d-none d-md-block fw-bold">Mathematics Association</h1>
-                    <p class="fs-5 text-light lh-base">We are a group of Mathematics monomaniacs with a zeal of proliferating common interest
+                    <p class="fs-5 text-light lh-base">We are a group of Mathematics monomaniacs with a zeal of
+                        proliferating common interest
                         among Mathematicians, statisticians through symposiums, workshops, olympiads,
                         talks, blogs, newsletters and more.</p>
                     <a href="#Works" class="btn btn-light">
-                    <!-- <a href="#" class="btn btn-outline-info px-4 me-sm-3"> -->
                         <i class="bi bi-chevron-right"></i> Know More
 
                     </a>
@@ -106,14 +108,78 @@
         </div>
     </section>
 
-
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#212529" fill-opacity="1"
             d="M0,96L48,101.3C96,107,192,117,288,144C384,171,480,213,576,240C672,267,768,277,864,240C960,203,1056,117,1152,90.7C1248,64,1344,96,1392,112L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
         </path>
     </svg>
 
-    
+    <section class="quotes container pb-5">
+        <h1 class="p-3 display-4 text-dark fw-bold">Quotes</h1>
+        <div class="row mb-2">
+            <div class="quote1 col-md-6">
+                <div
+                    class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Pure Mathematics is, in its way, the poetry of logical ideas.</i></h5>
+                        <div class="mb-1 lead text-muted">~ Albert Einstein</div>
+                    </div>
+                    <div class="col-auto d-none d-lg-block"></div>
+                </div>
+            </div>
+            <div class="quote2 col-md-6">
+                <div
+                    class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>There is geometry in the humming of strings and there is music in the spacing of spheres.</i></h5>
+                        <div class="mb-1 lead text-muted">~ Pythagoras</div>
+                    </div>
+                    <div class="col-auto d-none d-lg-block"></div>
+                </div>
+            </div>
+            <div class="quote3 col-md-6">
+                <div
+                    class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>One of the endlessly alluring aspects of mathematics is that its thorniest paradoxes have a way of blooming into beautiful theories.</i></h5>
+                        <div class="mb-1 lead text-muted">~ Philip J. Davis</div>
+                    </div>
+                    <div class="col-auto d-none d-lg-block"></div>
+                </div>
+            </div>
+            <div class="quote4 col-md-6">
+                <div
+                    class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Mathematics is a music of reason.</i></h5>
+                        <div class="mb-1 lead text-muted">~ James Joseph Sylvester</div>
+                    </div>
+                    <div class="col-auto d-none d-lg-block"></div>
+                </div>
+            </div>
+            <div class="quote5 col-md-6">
+                <div
+                    class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>"Obvious" is the most dangerous work in Mathematics.</i></h5>
+                        <div class="mb-1 lead text-muted">~ E.T. Bell</div>
+                    </div>
+                    <div class="col-auto d-none d-lg-block"></div>
+                </div>
+            </div>
+            <div class="quote6 col-md-6">
+                <div
+                    class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Measure what can be measured and make measurable what cannot be measured.</i></h5>
+                        <div class="mb-1 lead text-muted">~ Galileo Galilei</div>
+                    </div>
+                    <div class="col-auto d-none d-lg-block"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="container px-4 pb-5" id="Works">
         <!-- Todo: Check whether to use bold in the description of the events. -->
         <h1 class="p-3 display-4 text-dark fw-bold border-bottom">Our Works</h1>
@@ -139,7 +205,8 @@
                             <span class="fs-2 fw-bold text-info">Workshops</span>
                         </div>
                         <p class="pt-3 mx-auto lead fw-bold">
-                            In-depth hands on training and demonstrating providing insights on useful mathematical tools and softwares.
+                            In-depth hands on training and demonstrating providing insights on useful mathematical tools
+                            and softwares.
                         </p>
                     </div>
                 </div>
@@ -152,7 +219,8 @@
                             <span class="fs-2 fw-bold text-info">Talks</span>
                         </div>
                         <p class="pt-3 mx-auto lead fw-bold">
-                            Regular talks and sessions on a plethora of topics by some of the most renowned and finest in the industry.
+                            Regular talks and sessions on a plethora of topics by some of the most renowned and finest
+                            in the industry.
                         </p>
                     </div>
                 </div>
@@ -193,14 +261,14 @@
                             <span class="fs-2 fw-bold text-info">Guest Lectures</span>
                         </div>
                         <p class="pt-3 mx-auto fs-5">
-                            Interesting lectures by guest sharing their experiences to help to carve out a path for your career.
+                            Interesting lectures by guest sharing their experiences to help to carve out a path for your
+                            career.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 
     <footer class="bg-dark text-light position-relative pt-5 pb-2 overflow-hidden">
         <div class="container">
@@ -256,6 +324,42 @@
             duration: 2000,
             origin: "right",
             distance: "150px"
+        })
+        sr.reveal(".quote1", {
+            duration: 2000,
+            origin: "bottom",
+            distance: "300px",
+            viewFactor: 0.2
+        })
+        sr.reveal(".quote2", {
+            duration: 2000,
+            origin: "bottom",
+            distance: "300px",
+            viewFactor: 0.2
+        })
+        sr.reveal(".quote3", {
+            duration: 2000,
+            origin: "bottom",
+            distance: "300px",
+            viewFactor: 0.2
+        })
+        sr.reveal(".quote4", {
+            duration: 2000,
+            origin: "bottom",
+            distance: "300px",
+            viewFactor: 0.2
+        })
+        sr.reveal(".quote5", {
+            duration: 2000,
+            origin: "bottom",
+            distance: "300px",
+            viewFactor: 0.2
+        })
+        sr.reveal(".quote6", {
+            duration: 2000,
+            origin: "bottom",
+            distance: "300px",
+            viewFactor: 0.2
         })
         sr.reveal(".olympiads", {
             duration: 2000,
