added contact info for contact us section

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
                         proliferating common interest
                         among Mathematicians, statisticians through symposiums, workshops, olympiads,
                         talks, blogs, newsletters and more.</p>
-                    <a href="#Works" class="btn btn-light">
+                    <a href="#Works" class="btn btn-light me-3">
                         <i class="bi bi-chevron-right"></i> Know More
-
+                    </a>
+                    <a href="#ContactUs" class="btn btn-light">
+                        <i class="bi bi-chevron-right"></i> Contact Us
                     </a>
                 </div>
             </div>
@@ -268,6 +270,41 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <h1 id="ContactUs" class="container p-3 display-4 fw-bold">Contact Us</h1>
+    <section class="text-dark" style="background-image: url('./assets/map.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <div class="container">
+            <div class="p-5 d-flex align-items-center justify-content-evenly gap-2">
+                <div class="">
+                    <iframe style="border: #fff 0.4rem solid; border-radius: 50%; height: 25vw; width: 25vw;"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3510.829553736456!2d75.58477941433881!3d28.36400230293597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39131964f43e4575%3A0x1fbad30854cf884d!2sBirla+Institute+of+Technology+and+Science!5e0!3m2!1sen!2sin!4v1505764775549" style="border:0" allowfullscreen="" width="600" height="450" frameborder="0"></iframe>
+                </div>
+                <div class="p-4 w-auto d-flex flex-column justify-content-center gap-3">
+                    <div class="detail1">
+                        <span class="fw-bold lead">Professor In-charge</span>
+                        <span class="d-block fw-bold">Dr. Sumanta Pasari</span>
+                        <i>sumanta.pasari@pilani.bits-pilani.ac.in</i>
+                    </div>
+                    <div class="detail2">
+                        <span class="fw-bold lead">President</span>
+                        <span class="d-block fw-bold">Rituj Mittal</span>
+                        <i>f20180915@pilani.bits-pilani.ac.in</i>
+                    </div>
+                    <div class="detail3">
+                        <span class="fw-bold lead">Vice President</span>
+                        <span class="d-block fw-bold">Prajwal Ranjan</span>
+                        <i>f20180414@pilani.bits-pilani.ac.in</i>
+                    </div>
+                    <div class="detail3">
+                        <span class="fw-bold lead">Secretary</span>
+                        <span class="d-block fw-bold">Atmesh Mahapatra</span>
+                        <i>f20190560@pilani.bits-pilani.ac.in</i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <footer class="bg-dark text-light position-relative pt-5 pb-2 overflow-hidden">
