update order of quotes for small devices

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="quotes container pb-5">
         <h1 class="p-3 display-4 text-dark fw-bold">Quotes</h1>
         <div class="row mb-2">
-            <div class="quote1 col-md-6">
+            <div class="quote1 order-1 order-md-1 col-md-6">
                 <div
                     class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
@@ -129,7 +129,7 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote2 col-md-6">
+            <div class="quote2 order-2 order-md-2 col-md-6">
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
@@ -139,7 +139,7 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote3 col-md-6">
+            <div class="quote3 order-4 order-md-3 col-md-6">
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
@@ -149,7 +149,7 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote4 col-md-6">
+            <div class="quote4 order-3 order-md-4 col-md-6">
                 <div
                     class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
@@ -159,7 +159,7 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote5 col-md-6">
+            <div class="quote5 order-5 order-md-5 col-md-6">
                 <div
                     class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
@@ -169,7 +169,7 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote6 col-md-6">
+            <div class="quote6 order-6 order-md-6 col-md-6">
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
