fixed ordering of quotes

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     <section class="quotes container pb-5">
         <h1 class="p-3 display-4 text-dark fw-bold">Quotes</h1>
         <div class="row mb-2">
-            <div class="quote1 order-1 order-md-1 col-md-6">
+            <div class="quote1 col-md-6">
                 <div
-                    class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Pure Mathematics is, in its way, the poetry of logical ideas.</i></h5>
                         <div class="mb-1 lead text-muted">~ Albert Einstein</div>
@@ -129,9 +129,9 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote2 order-2 order-md-2 col-md-6">
+            <div class="quote2 order-1 order-md-1 col-md-6">
                 <div
-                    class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>There is geometry in the humming of strings and there is music in the spacing of spheres.</i></h5>
                         <div class="mb-1 lead text-muted">~ Pythagoras</div>
@@ -139,7 +139,7 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote3 order-4 order-md-3 col-md-6">
+            <div class="quote3 order-2 order-md-3 col-md-6">
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
@@ -149,7 +149,7 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote4 order-3 order-md-4 col-md-6">
+            <div class="quote4 order-3 order-md-2 col-md-6">
                 <div
                     class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
@@ -159,9 +159,9 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote5 order-5 order-md-5 col-md-6">
+            <div class="quote5 order-4 order-md-4 col-md-6">
                 <div
-                    class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>"Obvious" is the most dangerous work in Mathematics.</i></h5>
                         <div class="mb-1 lead text-muted">~ E.T. Bell</div>
@@ -169,9 +169,9 @@
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
-            <div class="quote6 order-6 order-md-6 col-md-6">
+            <div class="quote6 order-5 order-md-5 col-md-6">
                 <div
-                    class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Measure what can be measured and make measurable what cannot be measured.</i></h5>
                         <div class="mb-1 lead text-muted">~ Galileo Galilei</div>
