completed contact us section by adding message

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span class="d-none d-md-block">BITS Pilani</span>
                 </a>
             </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-dropdown"
+            <button class="navbar-toggler fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#nav-dropdown"
                 aria-controls="nav-dropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -62,7 +62,7 @@
                             Contact Us
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                            <li><a class="dropdown-item" href="#ContactUs">Contact Us</a></li>
                             <li><a class="dropdown-item" href="#">Join Us</a></li>
                         </ul>
                     </li>
@@ -110,7 +110,7 @@
         </div>
     </section>
 
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <svg xmlns="http://www.w3.org/#fff/svg" viewBox="0 0 1440 320">
         <path fill="#212529" fill-opacity="1"
             d="M0,96L48,101.3C96,107,192,117,288,144C384,171,480,213,576,240C672,267,768,277,864,240C960,203,1056,117,1152,90.7C1248,64,1344,96,1392,112L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
         </path>
@@ -120,10 +120,12 @@
         <h1 class="p-3 display-4 text-dark fw-bold">Quotes</h1>
         <div class="row mb-2">
             <div class="quote1 col-md-6">
+                <!-- TODO: d-none for small screens & col-md-auto-->
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Pure Mathematics is, in its way, the poetry of logical ideas.</i></h5>
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Pure Mathematics is, in its way, the
+                                poetry of logical ideas.</i></h5>
                         <div class="mb-1 lead text-muted">~ Albert Einstein</div>
                     </div>
                     <div class="col-auto d-none d-lg-block"></div>
@@ -133,37 +135,45 @@
                 <div
                     class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>There is geometry in the humming of strings and there is music in the spacing of spheres.</i></h5>
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>There is geometry in the humming of
+                                strings and there is music in the spacing of spheres.</i></h5>
                         <div class="mb-1 lead text-muted">~ Pythagoras</div>
                     </div>
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
             <div class="quote3 order-2 order-md-3 col-md-6">
+                <!--TODO: d-none for small screens -->
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>One of the endlessly alluring aspects of mathematics is that its thorniest paradoxes have a way of blooming into beautiful theories.</i></h5>
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>One of the endlessly alluring aspects of
+                                mathematics is that its thorniest paradoxes have a way of blooming into beautiful
+                                theories.</i></h5>
                         <div class="mb-1 lead text-muted">~ Philip J. Davis</div>
                     </div>
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
             <div class="quote4 order-3 order-md-2 col-md-6">
+                <!--TODO:  d-none for small screens & col-md-auto -->
                 <div
                     class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Mathematics is a music of reason.</i></h5>
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Mathematics is a music of reason.</i>
+                        </h5>
                         <div class="mb-1 lead text-muted">~ James Joseph Sylvester</div>
                     </div>
                     <div class="col-auto d-none d-lg-block"></div>
                 </div>
             </div>
             <div class="quote5 order-4 order-md-4 col-md-6">
+                <!--TODO:  col-md-auto -->
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>"Obvious" is the most dangerous work in Mathematics.</i></h5>
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>"Obvious" is the most dangerous work in
+                                Mathematics.</i></h5>
                         <div class="mb-1 lead text-muted">~ E.T. Bell</div>
                     </div>
                     <div class="col-auto d-none d-lg-block"></div>
@@ -173,7 +183,8 @@
                 <div
                     class="row text-white bg-dark g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Measure what can be measured and make measurable what cannot be measured.</i></h5>
+                        <h5 style="font-family: 'Lora', serif;" class="mb-1"><i>Measure what can be measured and make
+                                measurable what cannot be measured.</i></h5>
                         <div class="mb-1 lead text-muted">~ Galileo Galilei</div>
                     </div>
                     <div class="col-auto d-none d-lg-block"></div>
@@ -272,14 +283,16 @@
         </div>
     </section>
 
-    <h1 id="ContactUs" class="container p-3 display-4 fw-bold">Contact Us</h1>
-    <section class="text-dark" style="background-image: url('./assets/map.jpg'); background-repeat: no-repeat; background-size: cover;">
-        <div class="container">
+    <h1 id="ContactUs" class="container px-5 py-3 display-4 fw-bold border-bottom">Contact Us</h1>
+    <section class="text-dark bg-dark p-md-5 pb-md-0 p-3">
+        <div class="container-md shadow my-3"
+            style="background-image: url('./assets/map.jpg'); background-repeat: no-repeat; background-size: cover; border-radius: 3rem;">
             <div class="row p-5 align-items-center justify-content-center gap-5 gap-md-0">
                 <div class="map col col-md-6 d-flex justify-content-center">
                     <iframe style="border: #fff 0.4rem solid; border-radius: 50%; height: 17rem; width: 17rem;"
                         class="shadow"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3510.829553736456!2d75.58477941433881!3d28.36400230293597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39131964f43e4575%3A0x1fbad30854cf884d!2sBirla+Institute+of+Technology+and+Science!5e0!3m2!1sen!2sin!4v1505764775549" style="border:0" allowfullscreen="" width="600" height="450" frameborder="0"></iframe>
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3510.829553736456!2d75.58477941433881!3d28.36400230293597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39131964f43e4575%3A0x1fbad30854cf884d!2sBirla+Institute+of+Technology+and+Science!5e0!3m2!1sen!2sin!4v1505764775549"
+                        style="border:0" allowfullscreen="" width="600" height="450" frameborder="0"></iframe>
                 </div>
                 <!-- <div class="p-4 w-auto d-flex flex-column justify-content-center gap-5 gap-md-3"> -->
                 <div class="col-auto col-md-6 d-flex flex-column justify-content-center gap-2">
@@ -306,10 +319,29 @@
                 </div>
             </div>
         </div>
-
+        <div class="p-5 mx-3 mx-lg-5 row justify-content-center justify-content-lg-between">
+            <form class="col col-sm-10 col-lg-5 d-flex flex-column gap-3">
+                <div class="col">
+                    <input style="border-radius: 0.75rem;" type="text" class="form-control border border-dark shadow" id="Name" placeholder="Name" required>
+                </div>
+                <div class="col">
+                    <input style="border-radius: 0.75rem;" type="email" class="form-control border border-dark shadow" id="Email" placeholder="Email" required>
+                </div>
+                <div class="col">
+                    <input style="border-radius: 0.75rem;" type="text" class="form-control border border-dark shadow" id="Mobile" placeholder="Mobile" required>
+                </div>
+                <div class="col">
+                    <textarea style="border-radius: 0.75rem;" class="form-control border border-dark shadow" id="Message" placeholder="Message" rows="5"></textarea>
+                </div>
+                <div class="col">
+                    <button class="btn btn-primary shadow" type="submit">Submit</button>
+                </div>
+            </form>
+            <div class="d-none col-lg-6 bg-danger"></div>
+        </div>
     </section>
 
-    <footer class="bg-dark text-light position-relative pt-5 pb-2 overflow-hidden">
+    <footer class="bg-dark text-light position-relative pt-5 pb-2 overflow-hidden shadow">
         <div class="container">
             <div class="row justify-content-evenly pb-4">
                 <!-- <div class="col-12 col-lg-6 col-xl-4 d-flex justify-content-evenly mb-5 mb-lg-0"> -->
@@ -342,8 +374,8 @@
             <p class="text-center text-secondary">&copy; 2021 Mathematics Association BITS Pilani.
                 <span class="d-block d-md-inline">All Rights Reserved.</span>
             </p>
-            <a href="#" class="d-none d-md-inline position-absolute top-0 bottom-0 end-0 p-5">
-                <i class="bi bi-arrow-up-circle text-light fs-1"></i>
+            <a href="#" class="d-none d-md-inline position-absolute top-0 end-0 p-5">
+                <i class="bi bi-arrow-up-circle text-light fs-2"></i>
             </a>
         </div>
     </footer>
