--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     </svg>
 
     <section class="quotes container pb-5">
+        <!-- Todo : Maybe we can remove the Quotes heading. -->
         <h1 class="p-3 display-4 text-dark fw-bold">Quotes</h1>
         <div class="row mb-2">
             <div class="quote1 col-md-6">
@@ -289,7 +290,7 @@
             style="background-image: url('./assets/map.jpg'); background-repeat: no-repeat; background-size: cover; border-radius: 3rem;">
             <div class="row p-5 align-items-center justify-content-center gap-5 gap-md-0">
                 <div class="map col col-md-6 d-flex justify-content-center">
-                    <iframe style="border: #fff 0.4rem solid; border-radius: 50%; height: 17rem; width: 17rem;"
+                    <iframe style="border: #fff 0.4rem solid; border-radius: 50%; height: 16rem; width: 16rem;"
                         class="shadow"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3510.829553736456!2d75.58477941433881!3d28.36400230293597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39131964f43e4575%3A0x1fbad30854cf884d!2sBirla+Institute+of+Technology+and+Science!5e0!3m2!1sen!2sin!4v1505764775549"
                         style="border:0" allowfullscreen="" width="600" height="450" frameborder="0"></iframe>
@@ -311,7 +312,7 @@
                         <span class="d-block fw-bold">Prajwal Ranjan</span>
                         <i>f20180414@pilani.bits-pilani.ac.in</i>
                     </div>
-                    <div class="detail3">
+                    <div class="detail4">
                         <span class="fw-bold lead">Secretary</span>
                         <span class="d-block fw-bold">Atmesh Mahapatra</span>
                         <i>f20190560@pilani.bits-pilani.ac.in</i>
@@ -337,7 +338,9 @@
                     <button class="btn btn-primary shadow" type="submit">Submit</button>
                 </div>
             </form>
-            <div class="d-none col-lg-6 bg-danger"></div>
+            <div class="d-none col-lg-6 bg-danger">
+                <!-- Todo: Add a group image. -->
+            </div>
         </div>
     </section>
 
