--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             Members
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#">Current Members</a></li>
+                            <li><a class="dropdown-item" href="./pages/members.html">Current Members</a></li>
                             <li><a class="dropdown-item" href="#">Past Members</a></li>
                         </ul>
                     </li>
