--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                             Events
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#">Upcoming Events</a></li>
-                            <li><a class="dropdown-item" href="#">Past Events</a></li>
-                            <li><a class="dropdown-item" href="#">Talk Series</a></li>
+                            <li><a class="dropdown-item" href="./pages/new_events.html">Upcoming Events</a></li>
+                            <li><a class="dropdown-item" href="./pages/new_events.html#past-events">Past Events</a></li>
+                            <li><a class="dropdown-item" href="./pages/new_events.html#talk-series">Talk Series</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -85,14 +85,6 @@
                     <img src="assets/clock-tower.png" class="rounded-circle img-fluid" alt="bits-pilani-clock-tower">
                 </div>
                 <div class="spotlight-content text-start col-10 col-md-7">
-                    <!-- TODO: OPTION 1 -->
-                    <!-- <h1 class="display-6 d-md-none fw-bold">Mathematics Association</h1>
-                    <h1 class="display-5 d-none d-md-block fw-bold">Mathematics Association</h1>
-                    <p class="lead text-secondary fw-bold">We are a group of Mathematics monomaniacs with a zeal of
-                        proliferating common interest
-                        among Mathematicians, statisticians through symposiums, workshops, olympiads,
-                        talks, guest lectures, newsletters, blogs and more.</p> -->
-                    <!-- TODO: OPTION 2 -->
                     <h1 class="display-6 d-md-none fw-bold">Mathematics Association</h1>
                     <h1 class="display-5 d-none d-md-block fw-bold">Mathematics Association</h1>
                     <p class="fs-5 text-light lh-base">We are a group of Mathematics monomaniacs with a zeal of
