--- a/pages/members.html
+++ b/pages/members.html
@@ -51,9 +51,9 @@
                             Events
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#">Upcoming Events</a></li>
-                            <li><a class="dropdown-item" href="#">Past Events</a></li>
-                            <li><a class="dropdown-item" href="#">Talk Series</a></li>
+                            <li><a class="dropdown-item" href="./new_events.html#upcoming-events">Upcoming Events</a></li>
+                            <li><a class="dropdown-item" href="./new_events.html#past-events">Past Events</a></li>
+                            <li><a class="dropdown-item" href="./new_events.html#talk-series">Talk Series</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
