--- a/pages/members.html
+++ b/pages/members.html
@@ -66,12 +66,12 @@
                             <li><a class="dropdown-item" href="#">Join Us</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Newsletters</a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Alumni</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -195,7 +195,7 @@
     </section>
 
     <section class="bg-dark text-light container-fluid senior-members py-5">
-        <div class="container display-4 fw-bold text-center pb-5">
+        <div class="container display-6 fw-bold text-center pb-5">
             <i class="bi bi-people-fill"></i>
             Executive Committee
         </div>
