minor changes to events page

--- a/pages/members.html
+++ b/pages/members.html
@@ -178,7 +178,7 @@
                 <a href="#"><i class="bi bi-github text-light fs-5 mx-1"></i></a>
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-3 mb-lg-2">
-                <img src="../assets/members/kshitij.png" class="rounded-circle img-fluid shadow border border-dark border-5" alt="rajan">
+                <img src="../assets/members/rajan.jfif" class="rounded-circle img-fluid shadow border border-dark border-5" alt="rajan">
                 <span class="fs-5">Rajan Sahu</span>
                 <span class="d-block">Editing Team Head</span>
                 <a href="#"><i class="bi bi-linkedin text-light fs-5 mx-1"></i></a>
